@@ -1,3 +1,4 @@
+* Update TinyMCE to version 7
 * Add python-format flag to PO files
 * Add partial support for constraints with SQLite backend
 
